--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -11416,11 +11416,11 @@
         }
       },
       {
-        "defaultMessage": "!!!To show wallet public key click \"Reveal\" button",
+        "defaultMessage": "!!!Click Reveal on the right-hand side to display the public key of the wallet.",
         "description": "Wallet public key show instruction.",
         "end": {
           "column": 3,
-          "line": 29
+          "line": 30
         },
         "file": "source/renderer/app/components/wallet/settings/WalletPublicKeyField.js",
         "id": "wallet.settings.walletPublicKeyShowInstruction",
@@ -11434,13 +11434,13 @@
         "description": "Show QR code tooltip.",
         "end": {
           "column": 3,
-          "line": 34
+          "line": 35
         },
         "file": "source/renderer/app/components/wallet/settings/WalletPublicKeyField.js",
         "id": "wallet.settings.showQRCode",
         "start": {
           "column": 14,
-          "line": 30
+          "line": 31
         }
       }
     ],
